# gamely

./: README.md
backend/: CMakeLists.txt  main.cpp
backend/auth/: AuthService.cpp  AuthService.h  PasswordHasher.cpp  PasswordHasher.h
backend/config/: server_config.json
backend/core/: ClientSession.cpp  ClientSession.h  MessageRouter.cpp  Server.cpp  Server.h
backend/economy/: Economy.cpp  Economy.h
backend/games/: Game.h
backend/games/monopoly/: Board.cpp  Board.h  Dice.cpp  Dice.h  MonopolyGame.cpp  MonopolyGame.h  Property.cpp  Property.h  Rules.cpp  TurnManager.cpp
backend/lobby/: GameRoom.cpp  GameRoom.h  LobbyManager.cpp
backend/network/: HttpServer.cpp  Protocol.h  WebSocketServer.cpp
backend/persistence/: SaveManager.cpp  SaveManager.h  Serializer.cpp
backend/users/: User.cpp  User.h  UserManager.cpp
backend/utils/: Logger.cpp  Logger.h
docs/: api.md  architecture.md
frontend/: index.html  package.json
frontend/src/: main.jsx
frontend/src/api/: auth.js  gameSocket.js  lobby.js
frontend/src/components/: Board.jsx  Dice.jsx  PlayerCard.jsx  Property.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Lobby.jsx  Monopoly.jsx  Register.jsx  Room.jsx
frontend/src/styles/: app.css
